{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 47,
  "lineage": "aa375408-ae51-bfb8-e4ed-07baee343589",
  "resources": [
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cp_sg",
      "provider": "module.eks.module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:116839935550:security-group/sg-09cf5cdf33d0ba5b4",
            "description": "EKS control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Required for managed EKS control plane",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09cf5cdf33d0ba5b4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to reach API server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09a1a1eec93f617a1"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Nodes to Cluster DNS (TCP)",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09a1a1eec93f617a1"
                ],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Nodes to Cluster DNS (UDP)",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-09a1a1eec93f617a1"
                ],
                "self": false,
                "to_port": 53
              }
            ],
            "name": "test-app-cluster-cp-sg",
            "name_prefix": "",
            "owner_id": "116839935550",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-app-cluster-cp-sg"
            },
            "tags_all": {
              "Name": "test-app-cluster-cp-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0904869f7d4019d18"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "module.eks.module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:116839935550:security-group/sg-09a1a1eec93f617a1",
            "description": "EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Required for managed EKS nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a1a1eec93f617a1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "API server to nodes (all TCP)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09cf5cdf33d0ba5b4"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Cluster to nodes DNS (TCP)",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09cf5cdf33d0ba5b4"
                ],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Cluster to nodes DNS (UDP)",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-09cf5cdf33d0ba5b4"
                ],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Full mesh among worker nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "test-app-cluster-node-sg",
            "name_prefix": "",
            "owner_id": "116839935550",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-app-cluster-node-sg"
            },
            "tags_all": {
              "Name": "test-app-cluster-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0904869f7d4019d18"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cp_ingress_nodes_api",
      "provider": "module.eks.module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to reach API server",
            "from_port": 443,
            "id": "sgrule-1162254163",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09cf5cdf33d0ba5b4",
            "security_group_rule_id": "sgr-0b9d540210bc3d559",
            "self": false,
            "source_security_group_id": "sg-09a1a1eec93f617a1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.eks_cp_sg",
            "module.eks.module.eks.aws_security_group.eks_node_sg"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cp_ingress_nodes_dns_tcp",
      "provider": "module.eks.module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Nodes to Cluster DNS (TCP)",
            "from_port": 53,
            "id": "sgrule-1197220286",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09cf5cdf33d0ba5b4",
            "security_group_rule_id": "sgr-0fccc244afeb66f1e",
            "self": false,
            "source_security_group_id": "sg-09a1a1eec93f617a1",
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.eks_cp_sg",
            "module.eks.module.eks.aws_security_group.eks_node_sg"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cp_ingress_nodes_dns_udp",
      "provider": "module.eks.module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Nodes to Cluster DNS (UDP)",
            "from_port": 53,
            "id": "sgrule-3808658001",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09cf5cdf33d0ba5b4",
            "security_group_rule_id": "sgr-061524a400542ec38",
            "self": false,
            "source_security_group_id": "sg-09a1a1eec93f617a1",
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.eks_cp_sg",
            "module.eks.module.eks.aws_security_group.eks_node_sg"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_ingress_cp_api",
      "provider": "module.eks.module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "API server to nodes (all TCP)",
            "from_port": 0,
            "id": "sgrule-2571147812",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a1a1eec93f617a1",
            "security_group_rule_id": "sgr-049bb81e2b9a315e3",
            "self": false,
            "source_security_group_id": "sg-09cf5cdf33d0ba5b4",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.eks_cp_sg",
            "module.eks.module.eks.aws_security_group.eks_node_sg"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_ingress_cp_dns_tcp",
      "provider": "module.eks.module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster to nodes DNS (TCP)",
            "from_port": 53,
            "id": "sgrule-2959775196",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a1a1eec93f617a1",
            "security_group_rule_id": "sgr-0e32b4ef59187e4c9",
            "self": false,
            "source_security_group_id": "sg-09cf5cdf33d0ba5b4",
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.eks_cp_sg",
            "module.eks.module.eks.aws_security_group.eks_node_sg"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_ingress_cp_dns_udp",
      "provider": "module.eks.module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster to nodes DNS (UDP)",
            "from_port": 53,
            "id": "sgrule-339031603",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09a1a1eec93f617a1",
            "security_group_rule_id": "sgr-06620a804b7d839c0",
            "self": false,
            "source_security_group_id": "sg-09cf5cdf33d0ba5b4",
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.eks_cp_sg",
            "module.eks.module.eks.aws_security_group.eks_node_sg"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_self_ingress",
      "provider": "module.eks.module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Full mesh among worker nodes",
            "from_port": 0,
            "id": "sgrule-1949642865",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09a1a1eec93f617a1",
            "security_group_rule_id": "sgr-014454e53f3d14708",
            "self": false,
            "source_security_group_id": "sg-09a1a1eec93f617a1",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.eks_node_sg"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "wopi_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "wopi-services",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "environment": "dev",
                  "managed-by": "terraform",
                  "name": "wopi-services"
                },
                "name": "wopi-services",
                "resource_version": "7932",
                "uid": "729559f5-d3a0-4c84-82cd-4dec87a07f8c"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.eks.module.eks.aws_cloudwatch_log_group.eks_cluster",
            "module.eks.module.eks.aws_ec2_tag.private_subnet_elb",
            "module.eks.module.eks.aws_eks_access_entry.terraform_user",
            "module.eks.module.eks.aws_eks_access_policy_association.terraform_user_admin",
            "module.eks.module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.module.eks.aws_iam_instance_profile.eks_node_profile",
            "module.eks.module.eks.aws_iam_role.eks_auto_node_role",
            "module.eks.module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.module.eks.aws_iam_role_policy_attachment.eks_auto_node_policies",
            "module.eks.module.eks.aws_iam_role_policy_attachment.eks_cluster_policies",
            "module.eks.module.eks.aws_kms_alias.eks_encryption_key_alias",
            "module.eks.module.eks.aws_kms_key.eks_encryption_key",
            "module.eks.module.eks.aws_security_group.eks_cp_sg",
            "module.eks.module.eks.aws_security_group.eks_node_sg",
            "module.eks.module.eks.aws_security_group_rule.cp_ingress_nodes_api",
            "module.eks.module.eks.aws_security_group_rule.cp_ingress_nodes_dns_tcp",
            "module.eks.module.eks.aws_security_group_rule.cp_ingress_nodes_dns_udp",
            "module.eks.module.eks.aws_security_group_rule.node_ingress_cp_api",
            "module.eks.module.eks.aws_security_group_rule.node_ingress_cp_dns_tcp",
            "module.eks.module.eks.aws_security_group_rule.node_ingress_cp_dns_udp",
            "module.eks.module.eks.aws_security_group_rule.node_self_ingress",
            "module.eks.module.eks.data.aws_caller_identity.current",
            "module.eks.module.eks.data.aws_iam_policy_document.eks_auto_node_assume",
            "module.eks.module.eks.data.aws_iam_policy_document.eks_cluster_assume",
            "module.eks.module.eks.data.aws_iam_session_context.current",
            "module.eks.module.eks.data.aws_region.current",
            "module.eks.null_resource.update_kubeconfig",
            "module.rds.aws_db_instance.wopi",
            "module.rds.aws_db_subnet_group.wopi",
            "module.rds.aws_iam_role.rds_monitoring",
            "module.rds.aws_iam_role_policy_attachment.rds_monitoring",
            "module.rds.aws_security_group.rds",
            "module.redis.aws_cloudwatch_log_group.redis_slow_log",
            "module.redis.aws_elasticache_replication_group.wopi",
            "module.redis.aws_elasticache_subnet_group.wopi",
            "module.redis.aws_security_group.redis"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:116839935550:security-group/sg-0eeadf7763154f370",
            "description": "Security group for WOPI RDS database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eeadf7763154f370",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SQL Server access from EKS",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "test-app-cluster-rds-sg20251019200334245700000002",
            "name_prefix": "test-app-cluster-rds-sg",
            "owner_id": "116839935550",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-app-cluster-rds-sg"
            },
            "tags_all": {
              "Name": "test-app-cluster-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0904869f7d4019d18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_cloudwatch_log_group.eks_cluster",
            "module.eks.module.eks.aws_ec2_tag.private_subnet_elb",
            "module.eks.module.eks.aws_eks_access_entry.terraform_user",
            "module.eks.module.eks.aws_eks_access_policy_association.terraform_user_admin",
            "module.eks.module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.module.eks.aws_iam_instance_profile.eks_node_profile",
            "module.eks.module.eks.aws_iam_role.eks_auto_node_role",
            "module.eks.module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.module.eks.aws_iam_role_policy_attachment.eks_auto_node_policies",
            "module.eks.module.eks.aws_iam_role_policy_attachment.eks_cluster_policies",
            "module.eks.module.eks.aws_kms_alias.eks_encryption_key_alias",
            "module.eks.module.eks.aws_kms_key.eks_encryption_key",
            "module.eks.module.eks.aws_security_group.eks_cp_sg",
            "module.eks.module.eks.aws_security_group.eks_node_sg",
            "module.eks.module.eks.aws_security_group_rule.cp_ingress_nodes_api",
            "module.eks.module.eks.aws_security_group_rule.cp_ingress_nodes_dns_tcp",
            "module.eks.module.eks.aws_security_group_rule.cp_ingress_nodes_dns_udp",
            "module.eks.module.eks.aws_security_group_rule.node_ingress_cp_api",
            "module.eks.module.eks.aws_security_group_rule.node_ingress_cp_dns_tcp",
            "module.eks.module.eks.aws_security_group_rule.node_ingress_cp_dns_udp",
            "module.eks.module.eks.aws_security_group_rule.node_self_ingress",
            "module.eks.module.eks.data.aws_caller_identity.current",
            "module.eks.module.eks.data.aws_iam_policy_document.eks_auto_node_assume",
            "module.eks.module.eks.data.aws_iam_policy_document.eks_cluster_assume",
            "module.eks.module.eks.data.aws_iam_session_context.current",
            "module.eks.module.eks.data.aws_region.current",
            "module.eks.null_resource.update_kubeconfig"
          ]
        }
      ]
    },
    {
      "module": "module.redis",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:116839935550:security-group/sg-03dfba7a20cfe206e",
            "description": "Security group for WOPI Redis cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03dfba7a20cfe206e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Redis access from EKS",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "test-app-cluster-redis-sg20251019200334245400000001",
            "name_prefix": "test-app-cluster-redis-sg",
            "owner_id": "116839935550",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-app-cluster-redis-sg"
            },
            "tags_all": {
              "Name": "test-app-cluster-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0904869f7d4019d18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_cloudwatch_log_group.eks_cluster",
            "module.eks.module.eks.aws_ec2_tag.private_subnet_elb",
            "module.eks.module.eks.aws_eks_access_entry.terraform_user",
            "module.eks.module.eks.aws_eks_access_policy_association.terraform_user_admin",
            "module.eks.module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.module.eks.aws_iam_instance_profile.eks_node_profile",
            "module.eks.module.eks.aws_iam_role.eks_auto_node_role",
            "module.eks.module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.module.eks.aws_iam_role_policy_attachment.eks_auto_node_policies",
            "module.eks.module.eks.aws_iam_role_policy_attachment.eks_cluster_policies",
            "module.eks.module.eks.aws_kms_alias.eks_encryption_key_alias",
            "module.eks.module.eks.aws_kms_key.eks_encryption_key",
            "module.eks.module.eks.aws_security_group.eks_cp_sg",
            "module.eks.module.eks.aws_security_group.eks_node_sg",
            "module.eks.module.eks.aws_security_group_rule.cp_ingress_nodes_api",
            "module.eks.module.eks.aws_security_group_rule.cp_ingress_nodes_dns_tcp",
            "module.eks.module.eks.aws_security_group_rule.cp_ingress_nodes_dns_udp",
            "module.eks.module.eks.aws_security_group_rule.node_ingress_cp_api",
            "module.eks.module.eks.aws_security_group_rule.node_ingress_cp_dns_tcp",
            "module.eks.module.eks.aws_security_group_rule.node_ingress_cp_dns_udp",
            "module.eks.module.eks.aws_security_group_rule.node_self_ingress",
            "module.eks.module.eks.data.aws_caller_identity.current",
            "module.eks.module.eks.data.aws_iam_policy_document.eks_auto_node_assume",
            "module.eks.module.eks.data.aws_iam_policy_document.eks_cluster_assume",
            "module.eks.module.eks.data.aws_iam_session_context.current",
            "module.eks.module.eks.data.aws_region.current",
            "module.eks.null_resource.update_kubeconfig"
          ]
        }
      ]
    }
  ]
}